<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/recorderDialogToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:titleTextColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recorderDialogPermissionsTv"
        android:text="@string/permission_rationale_audio"
        android:textSize="15dp"
        android:visibility="gone"
        android:drawableLeft="@android:drawable/ic_dialog_alert"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/recorderDialog_recordButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="3dp"
            android:text="@string/recorderDialog_Record_Start"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/media_record_not_pressed" />

        <Button
            android:id="@+id/recorderDialog_recordStopButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:background="@android:color/transparent"
            android:text="@string/recorderDialog_Record_Stop"
            android:drawableLeft="@drawable/media_record_pressed"
            android:enabled="false"/>

        <Button
            android:id="@+id/recorderDialog_playdButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="3dp"
            android:text="@string/recorderDialog_Play"
            android:enabled="false"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <Button
        android:id="@+id/recorder_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Submit" />


</LinearLayout>
