<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bat"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="5dp"
                    android:src="@android:drawable/ic_menu_edit" />
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/createEventScreen_Title"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/createEventTitleEdittext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/CreateSubEvent_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/createEventScreen_SubTitle"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/CreateSubEvenTitleEdittext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/createEventScreen_description"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/createEventDescriptionEdittext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        android:weightSum="100">


                        <Button
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/createEventDateSelector"
                            android:text="@string/createEventScreen_date"
                            android:onClick="ShowDatePicker"/>

                        <TextView
                            android:id="@+id/showSelectedDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:text="Event Date Not Selected"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        android:weightSum="100">


                        <Button
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/createEventTimeSelector"
                            android:text="@string/createEventScreen_time"
                            android:onClick="ShowTimePicker"/>

                        <TextView
                            android:id="@+id/showSelectedTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:text="Event Date and Time Not Selected"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        android:weightSum="100">


                        <Button
                            android:id="@+id/createEventSelectInvitees"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/createEventScreen_invitees" />

                        <Button
                            android:id="@+id/createEventShowNumberofInvitees"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="Example : 20 invitees selected"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Submit"
                        android:textAllCaps="true" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp">-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="This text is part of second Cardview\n\n"-->
            <!--android:textColor="@color/abc_search_url_text"-->
            <!--android:textSize="20sp" />-->

            <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>